# failure-first-planner

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  run.py
frontend/: index.html
src/agents/: __init__.py  failure_simulator.py  mitigation_agent.py  replanner.py
src/api/: app.py
src/models/: __init__.py  event.py  failure.py  plan.py
src/orchestrator/: __init__.py  loop.py
src/prompts/: __init__.py  failure_first.py
src/storage/: __init__.py  db.py
src/tools/: __init__.py  artist_registry.py  logistics.py  ticketing.py  venue_lookup.py  weather_checker.py
src/utils/: __init__.py  config.py  cost_tracker.py  logger.py  retry.py  scorer.py
tests/fixtures/: sample_events.json
tests/integration/: test_full_pipeline.py
tests/unit/: test_failure_simulator.py  test_models.py  test_tools.py
